--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
+    "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
